--- a/UniversityRentingApplication/WebContent/WEB-INF/web.xml
+++ b/UniversityRentingApplication/WebContent/WEB-INF/web.xml
@@ -10,13 +10,24 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   
-	  <servlet>
-		<servlet-name>controller</servlet-name>
+
+	<servlet>
+		<servlet-name>CustomerController</servlet-name>
 		<servlet-class>api.CustomerController</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>controller</servlet-name>
+		<servlet-name>CustomerController</servlet-name>
 		<url-pattern>/CustomerController</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>ItemController</servlet-name>
+		<servlet-class>api.ItemController</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>ItemController</servlet-name>
+		<url-pattern>/ItemController</url-pattern>
 	</servlet-mapping>
 </web-app>
