--- a/UniversityRentingApplication/WebContent/WEB-INF/web.xml
+++ b/UniversityRentingApplication/WebContent/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>UniversityRentingApplication</display-name>
-  <welcome-file-list>
+<!--   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
     <welcome-file>index.jsp</welcome-file>
@@ -29,9 +29,9 @@
 	<servlet-mapping>
 		<servlet-name>ItemController</servlet-name>
 		<url-pattern>/ItemController</url-pattern>
-	</servlet-mapping>
+	</servlet-mapping> -->
 
-<!--  	<servlet>
+  	<servlet>
 		<servlet-name>URA</servlet-name>
 		<servlet-class>api.Controller</servlet-class>
 	</servlet>
@@ -42,7 +42,7 @@
 	</servlet-mapping>
 
 	<welcome-file-list>
-		<welcome-file> viewItems.do </welcome-file>
-	</welcome-file-list> -->
+		<welcome-file>homePage.do</welcome-file>
+	</welcome-file-list>
 
 </web-app>
