--- a/UniversityRentingApplication/WebContent/WEB-INF/web.xml
+++ b/UniversityRentingApplication/WebContent/WEB-INF/web.xml
@@ -42,6 +42,6 @@
 	</servlet-mapping>
 
 	<welcome-file-list>
-		<welcome-file>login.do</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>    
 </web-app> 
